# awesome-skills

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: broken-skill.yml  config.yml  installer-bug.yml  new-source.yml
.github/workflows/: ci.yml  sync-skills.yml
scripts/: sync_skills.py
skills/aav-vector-design-agent/: SKILL.md
skills/accessibility-compliance/: SKILL.md
skills/agentd-drug-discovery/: SKILL.md
skills/alphafold/: SKILL.md
skills/alphafold-database-access/: SKILL.md
skills/alphafold_database_fetch_and_analyze/: SKILL.md
skills/alphagenome_single_variant_analysis/: SKILL.md
skills/antibody-design-agent/: SKILL.md
skills/api-hardening/: SKILL.md
skills/armored-cart-design-agent/: SKILL.md
skills/autonomous-oncology-agent/: SKILL.md
skills/bayesian-optimizer/: SKILL.md
skills/bids/: SKILL.md
skills/bindcraft/: SKILL.md
skills/binder-design/: SKILL.md
skills/binding-characterization/: SKILL.md
skills/bio-alignment-files-bam-statistics/: SKILL.md
skills/bio-alignment-filtering/: SKILL.md
skills/bio-alignment-indexing/: SKILL.md
skills/bio-alignment-sorting/: SKILL.md
skills/bio-alignment-validation/: SKILL.md
skills/bio-batch-downloads/: SKILL.md
skills/bio-bedgraph-handling/: SKILL.md
skills/bio-blast-searches/: SKILL.md
skills/bio-codon-usage/: SKILL.md
tests/: conftest.py  test_readme_counts.py  test_sanitize.py
(+473 files in other folders)
